@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Add "Do Not Show Results With Incomplete Data" to the result viewer
+
 Phoronix Test Suite 9.6.0 Milestone 2
 5 April 2020
 
